<!-- Archivo: res/layout/activity_register_asset_primary.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/txt_numero_etiqueta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placa_crea" />

        <EditText
            android:id="@+id/txt_numero_activo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_crea" />

        <EditText
            android:id="@+id/txt_serie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serie_crea" />

        <EditText
            android:id="@+id/txt_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_crea" />

        <EditText
            android:id="@+id/txt_codigo_responsable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/encargado_crea" />

        <Spinner
            android:id="@+id/sp_responsables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <Button
            android:id="@+id/btn_siguiente_datos_secundarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Siguiente"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>