<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Locate_Assets.Localizar_activo">

    <ScrollView
        android:id="@+id/LocateAssetForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Titulo -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/lbl_asignar"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/titulo3" />

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="17dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <EditText
                    android:id="@+id/txt_Numeroactivo"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <LinearLayout
                    android:layout_width="17dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <Button
                    android:id="@+id/btn_Veractivo"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/ver"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="14dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="vertical"></LinearLayout>

            <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/locate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lbl_numeroactivo"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/rownum"
                            android:textIsSelectable="false"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lbl_Descripcionactivo"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/rowdescription"
                            android:textAllCaps="false"
                            android:textIsSelectable="false"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lbl_RazonActivo"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/RowCompanie"
                            android:textIsSelectable="false"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lbl_Pais"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/Rowbuild"
                            android:textIsSelectable="false"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lbl_Edificio"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/Rowfloor"
                            android:textIsSelectable="false"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif" />

                        <TextView
                            android:id="@+id/lbl_Sector"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/RowOffice"
                            android:textIsSelectable="false"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif" />

                        <TextView
                            android:id="@+id/lbl_Tag"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/RowTag"
                            android:textIsSelectable="false"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif" />
                    </LinearLayout>


                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <ListView
                            android:id="@+id/listViewLocate"
                            android:layout_width="304dp"
                            android:layout_height="320dp"
                            android:layout_weight="1"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="8dp" />
                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>