<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Assign_tag_Offices.Asignar_tag_sector">

    <LinearLayout
        android:id="@+id/AsignarTagSectorForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="17dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <EditText
                    android:id="@+id/txt_NombreSector"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <LinearLayout
                    android:layout_width="17dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <Button
                    android:id="@+id/btn_VerSector"
                    android:layout_width="48dp"
                    android:layout_height="27dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/ver"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="14dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="vertical"></LinearLayout>



    <HorizontalScrollView
        android:id="@+id/AsignarTagSecm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_oficina"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/RowOffice"
                    android:textIsSelectable="false"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_piso"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/Rowfloor"
                    android:textAllCaps="false"
                    android:textIsSelectable="false"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_edificio"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/Rowbuild"
                    android:textIsSelectable="false"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_razonsocial"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/RowCompanie"
                    android:textIsSelectable="false"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_tag"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/RowTag"
                    android:textIsSelectable="false"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif" />
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ListView
                    android:id="@+id/listView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:headerDividersEnabled="false"
                    android:divider="@drawable/list_divider"
                    android:scrollbarStyle="insideOverlay"
                    android:smoothScrollbar="true"
                    android:verticalScrollbarPosition="right" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>