<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:id="@+id/tarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="5dp"
        app:cardElevation="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPlacaInven"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placa_actualiza"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNumActivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:gravity="right"
                    android:text=""
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDescripInv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_actualiza"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:gravity="right"
                    android:text=""
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblEPcInv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/epc_actualiza"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEPC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=""
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblSectorInv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/OfficeS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=""
                    android:textIsSelectable="false" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>


